web-infras/parser/tests/fixtures/babel/es2015/generators/invalid-escape-yield/output.txt
[SyntaxError]: keyword can not have any escap unicode (1,17)
1|(function* () { y\u0069eld; })
 |               ^
